this is the second page

--- a/pay.html
+++ b/pay.html
@@ -1,11 +1,12 @@
 <doctype html>
 <html>
    <head>
-       <title>Buy your train tickets here</title>
+       <title>You can pay for your train tickets here</title>
    </head>
    <body>
-       <h1>You can now buy your train tickets online i/h1>
-   
+       <h1>You can pay for your train tickets online </h1>
+	   <hr>
+        <p>We accept cash or transfer</p>
    </body>
 
 
