--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    </head>
    <body>
        <h1>This is the train</h1>
-        <p>welcome to the ticketapp feel free to book a ticket</p>
+        <h2>welcome to the ticketapp feel free to book a ticket</h2>
    </body>
 
 
