--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
    <head>
        <title>welcome to train ticketapp</title>
+	   <style>
+	      body{
+		  background-color:green;
+		  font-family:arial,corbel, sans-serif;
+		  }
+	      
+		  h1{
+		  color:white;
+		  }
+	   </style>
    </head>
    <body>
-       <h1>This is the train</h1>
+       <h1>This is the train ticketapp</h1>
         <h2>welcome to the ticketapp feel free to book a ticket</h2>
    </body>
 
