--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <body>
        <h1>This is the train ticketapp</h1>
         <h2>welcome to the ticketapp feel free to book a ticket</h2>
+		<h2>june 30th 2024</h2>
    </body>
 
 
